Added event sourcing

--- a/bar-stack-k8s.yaml
+++ b/bar-stack-k8s.yaml
@@ -348,7 +348,7 @@ spec:
       containers:
         - env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:10.152.183.115://mysql/eventuate
+              value: jdbc:mysql://mysql.default.svc.cluster.local:3306/eventuate
             - name: SPRING_DATASOURCE_USERNAME
               value: mysqluser
             - name: SPRING_DATASOURCE_PASSWORD
@@ -356,9 +356,9 @@ spec:
             - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
               value: com.mysql.jdbc.Driver
             - name: EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS
-              value: 10.152.183.32:9092
+              value: kafka.default.svc.cluster.local:9092
             - name: EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING
-              value: 10.152.183.240:2181
+              value: zookeeper.default.svc.cluster.local:2181
             - name: EVENTUATELOCAL_CDC_DB_USER_NAME
               value: root
             - name: EVENTUATELOCAL_CDC_DB_PASSWORD
